--- a/src/views/blog/article/index.html
+++ b/src/views/blog/article/index.html
@@ -5,7 +5,7 @@
         <div class="next-btn span3"><span class="white mr10 font16">下一篇</span><i class="fa fa-arrow-right fa-fw white"></i></div>
     </div>
     <h2 class="font24 white text-center normal title"></h2>
-    <div class="markdown-area"></div>
+    <div class="markdown-area content"></div>
     <div class="catalog-area"></div>
     <div class="page-template hide">
         <div class="list-item inline c-card clearfix">
