--- a/src/views/blog/catalog/index.html
+++ b/src/views/blog/catalog/index.html
@@ -34,11 +34,10 @@
         </div>
         <div class="catalog-area span8 white font16 ">
             <div class="catalog-title">目录</div>
-            <ul class="catalog-list">
+            <ul class="catalog-list" style="display:none">
 
             </ul>
         </div>
-
     </div>
     <ul class="articles-area">
     </ul>
@@ -59,20 +58,15 @@
     $(function() {
         var Catalog = {
             articles: [],
-            types: [{
-                type: "zenjs",
-                type_name: "zenjs 目录",
-            }, {
-                type: "life",
-                type_name: "life 目录",
-            }],
+            types: {},
             sections: null,
             map: {},
             init: function() {
-                if (articles) {
-                    this.articles = articles;
+                if (ZEN_ARTICLES) {
+                    this.articles = ZEN_ARTICLES;
                     this.pre();
-                    // this.rendType(this.types);
+                    this.rendType(this.types);
+                    this.rendArticles(this.articles);
                 }
             },
             pre: function() {
@@ -80,30 +74,28 @@
                 if (this.articles && this.articles.length > 0) {
                     var len = this.articles.length;
                     var data = this.articles;
-                    var parent = $(".articles-area");
                     for (var i = 0; i < data.length; i++) {
                         var item = data[i];
                         item.id = i;
-                        var clone = $(".page-template .article-item").clone();
-                        Store.data(clone, item);
-                        self.map[item.type + "/" + item.file] = item;
-                        Util.rendValue(clone, item);
-                        self.bindArticle(clone);
-                        parent.append(clone);
+                        if (!self.types[item.type]) {
+                            self.types[item.type] = [];
+                        }
+                        self.types[item.type].push(item);
                     }
                 }
             },
             rendType: function(types) {
                 var self = this;
                 if (types) {
-                    var len = types.length;
-                    var data = types;
                     var parent = $(".catalog-list");
-                    for (var i = 0; i < data.length; i++) {
-                        var item = data[i];
+                    for (var i in types) {
+                        var item = i;
                         var clone = $(".page-template .catalog-item").clone();
-                        Store.data(clone, item);
-                        Util.rendValue(clone, item);
+                        Store.data(clone, types[i]);
+                        clone.find(".type_name").text(i);
+                        clone.attr("data-type", i);
+                        clone.find(".type_num").text(types[i].length);
+                        self.bindType(clone);
                         parent.append(clone);
                     }
                 }
@@ -114,6 +106,7 @@
                     var len = articles.length;
                     var data = articles;
                     var parent = $(".articles-area");
+                    parent.empty();
                     for (var i = 0; i < data.length; i++) {
                         var item = data[i];
                         var clone = $(".page-template .article-item").clone();
@@ -131,10 +124,9 @@
             bindType: function(clone) {
                 var self = this;
                 clone.click(function() {
-                    var data = Store.data(clone);
-                    if (data && data.type) {
-                        var type = data.type;
-                        var articles = data.catalog[type];
+                    var type = $(this).attr("data-type");
+                    if (type) {
+                        var articles = self.types[type];
                         self.rendArticles(articles);
                     }
                 });
@@ -151,7 +143,15 @@
         }
         var Service = {
             init: function() {
+                //如果需要debug什么,可以将对象放入到this中
+                this.data = Catalog;
                 Catalog.init();
+                this.bind();
+            },
+            bind: function() {
+                $(".catalog-area").click(function() {
+                    $(".catalog-list").toggle();
+                });
             }
         }
         Zen.ready(Service);
