--- a/src/zen-css/reset.css
+++ b/src/zen-css/reset.css
@@ -1,5 +1,5 @@
 html {
-    font-family: arial, "微软雅黑";
+    font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif, "微软雅黑";
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     -ms-tap-highlight-color: rgba(0, 0, 0, 0);
