--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -2,4 +2,6 @@
     background: url("assets/img/background.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    top:0;
+    left: 0;
 }
