--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,4 +1,10 @@
 <style>
+    .zen-stack {
+        background: url("assets/img/background.jpg");
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+    }
+
     .zen-page {
         min-height: 100%;
     }
