--- a/src/zen-css/zen.css
+++ b/src/zen-css/zen.css
@@ -11,6 +11,17 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    transition: all 0.2s;
+}
+
+.zen-modules {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    transition: all 0.2s;
+    z-index: 0;
 }
 
 .zen-page {
