--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,7 +1,5 @@
-.zen-container {
+.zen-stack {
     background: url("assets/img/background.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    top:0;
-    left: 0;
 }
