--- a/src/views/example/toggle-group/index.html
+++ b/src/views/example/toggle-group/index.html
@@ -20,6 +20,7 @@
             <div id="m-status" v-zen="toggle-group"></div>
         </li>
     </ul>
+    <div class="lh30">&nbsp;</div>
 </div>
 <script>
     $(function() {
