--- a/src/zen-css/zen.css
+++ b/src/zen-css/zen.css
@@ -5,6 +5,7 @@
     top: 0;
     left: 0;
     overflow-y: auto;
+    transition: all 0.2s;
 }
 
 .zen-stack {
@@ -23,6 +24,7 @@
     margin: 0 auto;
     width: 100%;
     min-height: 100%;
+    transition: all 0.2s;
 }
 
 .zen-module {
