--- a/src/views/gradients/index.html
+++ b/src/views/gradients/index.html
@@ -104,7 +104,7 @@
             </span>
             <span class="about-detail">
                 <span class="yellow"><span v-link="http://uigradients.com/">Ui Gradients</span> by <span v-link="http://twitter.com/_ighosh" id="twitter-link" target="_blank">@_ighosh</span></span>
-            <br><span class="">rewrite with zenjs by ganlight</span>
+            <br><span class="">rewrite zenjs by ganlight</span>
             </span>
         </div>
     </div>
