--- a/zen/css/zen.css
+++ b/zen/css/zen.css
@@ -1,22 +1,25 @@
 .zen-container {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    overflow-y: auto;
     transition: all 0.2s;
 }
 
 .zen-stack {
-    position: absolute;
+    position: relative;
     transition: all 0.2s;
+}
+
+/*.zen-container {
+    position: absolute;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     top: 0;
     left: 0;
-    overflow-y: auto;
+    transition: all 0.2s;
 }
+
+.zen-stack {
+    position: relative;
+    transition: all 0.2s;
+}*/
 
 .zen-page {
     position: relative;
