--- a/zen/css/zen.css
+++ b/zen/css/zen.css
@@ -21,6 +21,15 @@
     transition: all 0.2s;
 }*/
 
+.zen-bg {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    transition: all 0.2s;
+}
+
 .zen-page {
     position: relative;
     max-width: 1024px;
