--- a/zen/css/a-reset.css
+++ b/zen/css/a-reset.css
@@ -1,5 +1,5 @@
 html {
-    font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif, "微软雅黑";
+    font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     -ms-tap-highlight-color: rgba(0, 0, 0, 0);
