--- a/zen/css/a-reset.css
+++ b/zen/css/a-reset.css
@@ -1,9 +1,15 @@
 html {
-    font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     -ms-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility
+}
+
+body,button,input,select,textarea {
+    font-family: -apple-system,BlinkMacSystemFont,"Microsoft YaHei","Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Helvetica","Arial",sans-serif
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
