--- a/src/views/ganlight/blog/catalog/index.html
+++ b/src/views/ganlight/blog/catalog/index.html
@@ -27,9 +27,10 @@
 
     .article-item .title {
         display: inline-block;
-        font-size: 18px;
-        color: rgba(155, 140, 103, 1);
-        border-bottom: 1px dashed rgba(155, 140, 103, 1);
+        font-size: 24px;
+        font-weight: 300;
+        color: rgba(255, 255, 255, .8);
+        border-bottom: 1px dashed rgba(255, 255, 255, .8);
         line-height: 40px;
         height: 40px;
         margin-bottom: 10px;
@@ -62,7 +63,7 @@
     </div>
     <zen-slot name="layout/footer.html"></zen-slot>
 </div>
-<script v-script="views/ganlight/blog/config.js"></script>
+<script v-script="views/markdown/config.js"></script>
 <script type="text/javascript">
     $(function() {
         var Catalog = {
